--- a/stylesheets/favorite-things.css
+++ b/stylesheets/favorite-things.css
@@ -14,12 +14,11 @@
 
 .filter-container {
   margin: 1rem 0;
-  padding: 0.5rem;
 }
 
 .checkbox-btn {
   float: left;
-  margin-right: 0.5rem;
+  margin: 0.5rem;
   overflow: auto;
   background-color: yellow;
 }
