--- a/stylesheets/scss/print.scss
+++ b/stylesheets/scss/print.scss
@@ -4,7 +4,7 @@
 
   * {
     background: transparent !important;
-    color: #darkgray !important;
+    color: $darkgray !important;
     box-shadow: none !important;
     text-shadow: none !important;
   }
