--- a/stylesheets/scss/favorite-things.scss
+++ b/stylesheets/scss/favorite-things.scss
@@ -1,18 +1,18 @@
 .favorite-things {
   width: 100%;
-  margin-top: 2em;
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   background: $lightblue;
 }
 
 .filter-header {
-  margin: 1em 0 0 0.5em;
+  margin: 1rem 0 0 0.5rem;
   color: $white;
 }
 
 .filter-container {
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
 }
 
 .favorites-row {
@@ -21,7 +21,7 @@
 
 .checkbox-btn {
   float: left;
-  margin: 0.5em 0 0 0.5em;
+  margin: 0.5rem 0 0 0.5rem;
   overflow: auto;
   color: $white;
   background-color: $darkblue;
@@ -38,7 +38,7 @@
 
 .checkbox-btn label span {
   display: block;
-  padding: 0.25em 0.5em;
+  padding: 0.25rem 0.5rem;
   text-align: center;
 }
 
@@ -52,15 +52,15 @@
 }
 
 .package {
-  margin: 0.5em;
-  padding: 0.5em;
+  margin: 0.5rem;
+  padding: 0.5rem;
   background-color: lighten($lightblue, 20%);
 }
 
 .category {
   display: inline-block;
-  margin-top: 0.5em;
-  padding: 0.125em 0.5em;
+  margin-top: 0.5rem;
+  padding: 0.125rem 0.5rem;
   color: $white;
   background: $darkblue;
 }
