--- a/stylesheets/scss/global.scss
+++ b/stylesheets/scss/global.scss
@@ -37,13 +37,13 @@ textarea {
 }
 
 html {
-  font-size: 1em;
+  font-size: 1rem;
   line-height: 1.4;
 }
 
 body {
-  font: 1em/1.5 $font-stack;
-  font-weight: 300;
+  font: 1rem/1.5 $font-stack;
+  font-weight: 400;
   color: $darkgray;
 }
 
@@ -58,8 +58,8 @@ body {
 }
 
 .browsehappy {
-  margin: 0.2em 0;
-  padding: 0.2em 0;
+  margin: 0.2rem 0;
+  padding: 0.2rem 0;
   background: $lightgray;
   color: $darkgray;
 }
@@ -74,25 +74,42 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
   font-weight: 300;
+  line-height: 1.2;
   color: $darkgray;
 }
 
-h1, h2 {
-  font-size: 1.5em;
+h1 {
+  font-size: 2.5rem;
 }
 
-h3, h4 {
-  font-size: 1.3em;
+h2 {
+  font-size: 1.75rem;
+}
+
+h3 {
+  font-size: 1.6rem;
+}
+
+h4 {
+  font-size: 1.4rem;
 }
 
 p {
   margin: 0;
-  font-size: 1.4em;
+  font-size: 1.3rem;
+  line-height: 1.4;
+  font-weight: 400;
   color: $darkgray;
 }
 
 li {
-  font-size: 1.4em;
+  font-size: 1.3rem;
+  line-height: 1.4;
+  font-weight: 400;
+}
+
+em {
+  font-style: italic;
 }
 
 a {
@@ -105,12 +122,12 @@ a {
 }
 
 small {
-  font-size: .8em;
+  font-size: 1rem;
 }
 
 a small {
   display: block;
-  font-size: .8em;
+  font-size: 1rem;
   color: $gray;
 }
 
@@ -122,7 +139,7 @@ q:before, q:after {
 hr {
   display: block;
   height: 1px;
-  margin: 1em 0;
+  margin: 1rem 0;
   padding: 0;
   border: 0;
   border-top: .5px solid $lightgray;
@@ -132,6 +149,8 @@ hr {
 /* main content */
 
 .page-container {
+  width: 100%;
+  max-width: 1200px;
   display: flex;
   margin: 0;
   padding: 0;
@@ -160,7 +179,6 @@ footer {
 
 .quote {
   cursor: pointer;
-  color: $darkgray;
 }
 
 .quote:hover {
@@ -246,7 +264,7 @@ footer {
 
 /* media queries */
 
-@media only screen and (max-width : 480px) {
+@include media(small) {
 
   body {
     margin-top: 0;
@@ -274,7 +292,7 @@ footer {
   }
 
   .top {
-    padding-bottom: 2em;
+    padding-bottom: 2rem;
   }
 
   footer {
