--- a/stylesheets/scss/pages.scss
+++ b/stylesheets/scss/pages.scss
@@ -1,17 +1,8 @@
 /* internal pages */
 
-.screenshot {
-  width: 100%;
-  margin: 2em 0 0 0;
-}
-
-.caption {
-  width: 100%;
-}
-
 .all-caps {
   text-transform: uppercase;
-  letter-spacing: .15em;
+  letter-spacing: .15rem;
 }
 
 .grid {
@@ -24,39 +15,13 @@
   margin: 20px;
   padding: 0;
   cursor: pointer;
-}
-
-.outer-video-container {
-  width: 60%;
-}
-
-@media only screen and (max-width : 768px) {
-
-  .outer-video-container {
-    width: 100%;
+  &:hover {
+    opacity: 0.8;
+    filter: alpha(opacity=80);
   }
-
-}
-
-.embed-container {
-  position: relative;
-  max-width: 100%;
-  height: auto;
-  padding-bottom: 56.25%;
-  overflow: hidden;
-}
-
-.embed-container iframe, .embed-container object, .embed-container embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.grid img:hover {
-  opacity: 0.8;
-  filter: alpha(opacity=80);
+  @include media(small) {
+    width: 100%
+  }
 }
 
 .popup {
@@ -66,8 +31,8 @@
 .close {
   float: right;
   margin: 0;
-  padding: 1em 0;
-  font-size: 1em;
+  padding: 1rem 0;
+  font-size: 1rem;
   color: $lightgreen;
   cursor: pointer;
 }
@@ -101,53 +66,48 @@
   cursor: pointer;
 }
 
-.license {
-  color: $lightgray;
-}
-
 .license img {
   border-width: 0;
   width: 80px;
 }
 
-.license a {
-  color: $lightgray;
+// work
+
+.caption {
+  width: 100%;
 }
 
-.license a:hover {
-  color: $gray;
+.work-list {
+  list-style: none;
+  margin: 2rem 0;
+  li{
+    line-height: 2;
+  }
 }
 
-/* development page */
-
-ul.personal-projects-list {
-  list-style-position: inside;
-  margin: 2em 0;
-}
-
-ul.personal-projects-list li.personal-projects {
-  line-height: 2;
-}
-
-/* play page */
-
-.sketchbooks {
-  display: inline;
-  text-transform: lowercase;
-  letter-spacing: 0;
-  color: $lightgray;
-  background-color: $white;
+.screenshot {
+  width: 100%;
+  margin: 2rem 0 0 0;
+  a {
+    position: relative;
+    top: 0;
+    transition: top ease 0.25s;
+    &:hover {
+      top: -3px;
+      background: none;
+    }
+  }
 }
 
 .slide {
   padding-top: 20px;
 }
 
-/* presentation pages */
+// talks
 
 .notes {
   width: 80%;
-  padding: 25px 0 0 25px;
+  padding: 25px 0 0 0;
 }
 
 .notes p {
@@ -156,29 +116,4 @@ ul.personal-projects-list li.personal-projects {
 
 .notes h4 {
   padding-bottom: 15px;
-}
-
-.pres {
-  cursor: pointer;
-}
-
-.align-presentation1 {
-  margin-left: 10px;
-}
-
-.align-presentation2 {
-  margin-left: 27px;
-}
-
-.align-presentation3 {
-  margin-left: 9px;
-}
-
-a.presentation {
-  color: $lightgray;
-  background-color: $white;
-}
-
-a.presentation:hover {
-  background-color: $aqua;
 }
