--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -32,12 +32,12 @@ textarea {
   color: #222; }
 
 html {
-  font-size: 1em;
+  font-size: 1rem;
   line-height: 1.4; }
 
 body {
-  font: 1em/1.5 "Source Sans Pro", sans-serif;
-  font-weight: 300;
+  font: 1rem/1.5 "Source Sans Pro", sans-serif;
+  font-weight: 400;
   color: #221e3C; }
 
 ::-moz-selection {
@@ -49,8 +49,8 @@ body {
   text-shadow: none; }
 
 .browsehappy {
-  margin: 0.2em 0;
-  padding: 0.2em 0;
+  margin: 0.2rem 0;
+  padding: 0.2rem 0;
   background: #f2f1fa;
   color: #221e3C; }
 
@@ -62,21 +62,35 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
   font-weight: 300;
+  line-height: 1.2;
   color: #221e3C; }
 
-h1, h2 {
-  font-size: 1.5em; }
+h1 {
+  font-size: 2.5rem; }
 
-h3, h4 {
-  font-size: 1.3em; }
+h2 {
+  font-size: 1.75rem; }
+
+h3 {
+  font-size: 1.6rem; }
+
+h4 {
+  font-size: 1.4rem; }
 
 p {
   margin: 0;
-  font-size: 1.4em;
+  font-size: 1.3rem;
+  line-height: 1.4;
+  font-weight: 400;
   color: #221e3C; }
 
 li {
-  font-size: 1.4em; }
+  font-size: 1.3rem;
+  line-height: 1.4;
+  font-weight: 400; }
+
+em {
+  font-style: italic; }
 
 a {
   font-weight: 600;
@@ -86,11 +100,11 @@ a {
     background: #87ffe3; }
 
 small {
-  font-size: .8em; }
+  font-size: 1rem; }
 
 a small {
   display: block;
-  font-size: .8em;
+  font-size: 1rem;
   color: #aca9C2; }
 
 q:before, q:after {
@@ -100,7 +114,7 @@ q:before, q:after {
 hr {
   display: block;
   height: 1px;
-  margin: 1em 0;
+  margin: 1rem 0;
   padding: 0;
   border: 0;
   border-top: 0.5px solid #f2f1fa;
@@ -108,6 +122,8 @@ hr {
 
 /* main content */
 .page-container {
+  width: 100%;
+  max-width: 1200px;
   display: flex;
   margin: 0;
   padding: 0;
@@ -130,8 +146,7 @@ footer {
 
 /* footer */
 .quote {
-  cursor: pointer;
-  color: #221e3C; }
+  cursor: pointer; }
 
 .quote:hover {
   background-color: #87ffe3; }
@@ -200,7 +215,7 @@ footer {
   *zoom: 1; }
 
 /* media queries */
-@media only screen and (max-width: 480px) {
+@media all and (max-width: 480px) {
   body {
     margin-top: 0; }
 
@@ -221,7 +236,7 @@ footer {
     width: 100%; }
 
   .top {
-    padding-bottom: 2em; }
+    padding-bottom: 2rem; }
 
   footer {
     display: none; } }
@@ -235,7 +250,7 @@ footer {
   float: right;
   display: none; }
 
-@media only screen and (max-width: 480px) {
+@media all and (max-width: 480px) {
   .sidebar {
     width: calc(100% - 40px); }
 
@@ -245,12 +260,12 @@ footer {
   .nav-ul {
     display: none;
     padding-top: 0;
-    padding-bottom: 1em; }
+    padding-bottom: 1rem; }
     .nav-ul.active {
       display: block; }
 
   .nav-ul li {
-    font-size: 1.3em;
+    font-size: 1.3rem;
     line-height: 1.5; } }
 .logo {
   width: 130px;
@@ -261,15 +276,15 @@ footer {
 
 .title {
   margin-top: 0;
-  font-size: .8em;
+  font-size: 1rem;
   font-style: italic;
   color: #221e3C; }
 
 .current {
-  background-color: #95f691; }
+  background-color: #87ffe3; }
 
 ul.nav-ul {
-  padding-top: 1.5em; }
+  padding-top: 1.5rem; }
 
 ul.nav-ul li {
   list-style: none; }
@@ -287,7 +302,7 @@ a.nav:hover {
   float: right;
   display: none; }
 
-@media only screen and (max-width: 480px) {
+@media all and (max-width: 480px) {
   .sidebar {
     width: calc(100% - 40px); }
 
@@ -297,12 +312,12 @@ a.nav:hover {
   .nav-ul {
     display: none;
     padding-top: 0;
-    padding-bottom: 1em; }
+    padding-bottom: 1rem; }
     .nav-ul.active {
       display: block; }
 
   .nav-ul li {
-    font-size: 1.3em;
+    font-size: 1.3rem;
     line-height: 1.5; } }
 .logo {
   width: 130px;
@@ -313,15 +328,15 @@ a.nav:hover {
 
 .title {
   margin-top: 0;
-  font-size: .8em;
+  font-size: 1rem;
   font-style: italic;
   color: #221e3C; }
 
 .current {
-  background-color: #95f691; }
+  background-color: #87ffe3; }
 
 ul.nav-ul {
-  padding-top: 1.5em; }
+  padding-top: 1.5rem; }
 
 ul.nav-ul li {
   list-style: none; }
@@ -330,16 +345,9 @@ a.nav:hover {
   background-color: #87ffe3; }
 
 /* internal pages */
-.screenshot {
-  width: 100%;
-  margin: 2em 0 0 0; }
-
-.caption {
-  width: 100%; }
-
 .all-caps {
   text-transform: uppercase;
-  letter-spacing: .15em; }
+  letter-spacing: .15rem; }
 
 .grid {
   width: 90%; }
@@ -350,30 +358,12 @@ a.nav:hover {
   margin: 20px;
   padding: 0;
   cursor: pointer; }
-
-.outer-video-container {
-  width: 60%; }
-
-@media only screen and (max-width: 768px) {
-  .outer-video-container {
-    width: 100%; } }
-.embed-container {
-  position: relative;
-  max-width: 100%;
-  height: auto;
-  padding-bottom: 56.25%;
-  overflow: hidden; }
-
-.embed-container iframe, .embed-container object, .embed-container embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; }
-
-.grid img:hover {
-  opacity: 0.8;
-  filter: alpha(opacity=80); }
+  .grid img:hover {
+    opacity: 0.8;
+    filter: alpha(opacity=80); }
+  @media all and (max-width: 480px) {
+    .grid img {
+      width: 100%; } }
 
 .popup {
   width: 60%; }
@@ -381,8 +371,8 @@ a.nav:hover {
 .close {
   float: right;
   margin: 0;
-  padding: 1em 0;
-  font-size: 1em;
+  padding: 1rem 0;
+  font-size: 1rem;
   color: #95f691;
   cursor: pointer; }
 
@@ -408,42 +398,36 @@ a.nav:hover {
 .top {
   cursor: pointer; }
 
-.license {
-  color: #f2f1fa; }
-
 .license img {
   border-width: 0;
   width: 80px; }
 
-.license a {
-  color: #f2f1fa; }
+.caption {
+  width: 100%; }
 
-.license a:hover {
-  color: #aca9C2; }
+.work-list {
+  list-style: none;
+  margin: 2rem 0; }
+  .work-list li {
+    line-height: 2; }
 
-/* development page */
-ul.personal-projects-list {
-  list-style-position: inside;
-  margin: 2em 0; }
-
-ul.personal-projects-list li.personal-projects {
-  line-height: 2; }
-
-/* play page */
-.sketchbooks {
-  display: inline;
-  text-transform: lowercase;
-  letter-spacing: 0;
-  color: #f2f1fa;
-  background-color: #fff; }
+.screenshot {
+  width: 100%;
+  margin: 2rem 0 0 0; }
+  .screenshot a {
+    position: relative;
+    top: 0;
+    transition: top ease 0.25s; }
+    .screenshot a:hover {
+      top: -3px;
+      background: none; }
 
 .slide {
   padding-top: 20px; }
 
-/* presentation pages */
 .notes {
   width: 80%;
-  padding: 25px 0 0 25px; }
+  padding: 25px 0 0 0; }
 
 .notes p {
   padding-bottom: 15px; }
@@ -451,29 +435,10 @@ ul.personal-projects-list li.personal-projects {
 .notes h4 {
   padding-bottom: 15px; }
 
-.pres {
-  cursor: pointer; }
-
-.align-presentation1 {
-  margin-left: 10px; }
-
-.align-presentation2 {
-  margin-left: 27px; }
-
-.align-presentation3 {
-  margin-left: 9px; }
-
-a.presentation {
-  color: #f2f1fa;
-  background-color: #fff; }
-
-a.presentation:hover {
-  background-color: #87ffe3; }
-
 /* intro text */
 #intro {
   width: 100%;
-  max-width: 930px;
+  max-width: 800px;
   height: auto;
   background-color: #221e3C; }
 
@@ -481,7 +446,7 @@ a.presentation:hover {
   float: right;
   padding: 10px 30px 20px 20px;
   color: #fff;
-  font: 4em "Source Sans Pro", sans-serif;
+  font: 4rem "Source Sans Pro", sans-serif;
   font-weight: 300;
   cursor: pointer; }
 
@@ -490,11 +455,13 @@ a.presentation:hover {
 
 .highlight {
   margin: 20px 0 0 0;
-  padding: 20px;
-  font: 2em "Source Sans Pro", sans-serif;
-  font-weight: 300;
+  padding: 40px;
+  font-size: 2rem;
   line-height: 1.6;
   color: #fff; }
+  @media all and (max-width: 480px) {
+    .highlight {
+      padding: 20px; } }
 
 .highlight a {
   color: #87ffe3; }
@@ -503,7 +470,7 @@ a.presentation:hover {
   color: #533fea;
   text-decoration: none; }
 
-@media only screen and (max-width: 480px) {
+@media all and (max-width: 480px) {
   #homepage-main-content {
     width: 100%;
     margin: 0;
@@ -960,6 +927,7 @@ a.brain-nav:hover {
 .about-img {
   float: left;
   width: 30%;
+  max-width: 200px;
   padding: 0 30px 20px 0; }
 
 .about-content {
@@ -970,15 +938,8 @@ a.brain-nav:hover {
   display: block;
   width: 100%;
   max-width: 1000px;
-  margin: 0 0 1em 0;
+  margin: 0 0 1rem 0;
   padding: 0; }
-
-a.about-link {
-  font-weight: 600;
-  color: #46ce40; }
-
-a.about-link:hover {
-  color: #278622; }
 
 .about-list {
   width: 100%;
@@ -986,6 +947,7 @@ a.about-link:hover {
   padding: 0; }
 
 .short {
+  max-width: 800px;
   margin: 0;
   padding: 25px;
   list-style: none;
@@ -996,11 +958,11 @@ h2.short-title {
   color: #221e3C; }
 
 .short ul {
-  padding-left: 1em; }
+  padding-left: 1rem; }
 
 .short ul li {
   margin-top: 10px;
-  padding-left: .25em;
+  padding-left: .25rem;
   padding-bottom: 10px;
   list-style-position: outside;
   color: #221e3C; }
@@ -1027,7 +989,7 @@ h2.short-title {
 @media print {
   * {
     background: transparent !important;
-    color: #darkgray !important;
+    color: #221e3C !important;
     box-shadow: none !important;
     text-shadow: none !important; }
 
@@ -1074,20 +1036,20 @@ h2.short-title {
 .broken-header {
   font-size: 50px; }
 
-p.broken-float {
+.broken-float {
   float: left;
   padding-top: 20px; }
 
 .broken-text {
-  margin: 1em 0;
-  font-size: 2em; }
+  margin: 1rem 0;
+  font-size: 2rem; }
 
-a.broken-link {
+.broken-link {
   font-weight: 300;
   text-decoration: none;
   color: #533fea; }
 
-a.broken-link:hover {
+.broken-link:hover {
   text-decoration: underline;
   color: #221e3C; }
 
@@ -1098,24 +1060,24 @@ a.broken-link:hover {
 
 .favorite-things {
   width: 100%;
-  margin-top: 2em;
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   background: #8f80ff; }
 
 .filter-header {
-  margin: 1em 0 0 0.5em;
+  margin: 1rem 0 0 0.5rem;
   color: #fff; }
 
 .filter-container {
-  margin-bottom: 1em; }
+  margin-bottom: 1rem; }
 
 .favorites-row {
   width: 100%; }
 
 .checkbox-btn {
   float: left;
-  margin: 0.5em 0 0 0.5em;
+  margin: 0.5rem 0 0 0.5rem;
   overflow: auto;
   color: #fff;
   background-color: #533fea; }
@@ -1129,7 +1091,7 @@ a.broken-link:hover {
 
 .checkbox-btn label span {
   display: block;
-  padding: 0.25em 0.5em;
+  padding: 0.25rem 0.5rem;
   text-align: center; }
 
 .checkbox-btn label input {
@@ -1140,14 +1102,14 @@ a.broken-link:hover {
   background: #2613b0; }
 
 .package {
-  margin: 0.5em;
-  padding: 0.5em;
+  margin: 0.5rem;
+  padding: 0.5rem;
   background-color: #e9e6ff; }
 
 .category {
   display: inline-block;
-  margin-top: 0.5em;
-  padding: 0.125em 0.5em;
+  margin-top: 0.5rem;
+  padding: 0.125rem 0.5rem;
   color: #fff;
   background: #533fea; }
 
